--- a/src/Music.css
+++ b/src/Music.css
@@ -1,59 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
 
-  .ui.card.main-container {
-    margin: 0 auto;
+
+.ui.card.main-container {
     color: black;
-    background: #1cd8df; 
-    background: -webkit-linear-gradient(
-      to right,
-      #fed128,
-      #1cd8df
-    ); 
-    background: linear-gradient(
-      to right,
-      #fed128,
-      #1cd8df
-    ); 
+    background: #1cd8df;
+    background: -webkit-linear-gradient(to right, #fed128, #1cd8df);
+    background: linear-gradient(to right, #fed128, #1cd8df);
     opacity: 0.9;
     box-shadow: 0 0 30px #fff, -10px 0 50px #f0f, 10px 0 50px #0ff;
     border-radius: 5px;
-    padding:5px;
-    margin-left:10rem ;
-  }
-  
-  .content {
+    padding: 5px;
+}
+
+.content {
     width: 60vw;
     font-size: 18px;
     text-align: center;
     margin-bottom: 20px;
-  
-  }
-  .content:hover {
+}
+.content:hover {
     cursor: pointer;
-  }
+}
 
-  .button-container {
+.button-container {
     margin: 20px 0 20px 0;
     text-align: center;
-   
-  }
-  
-  .header {
+}
+
+.header {
     text-align: center;
-  }
-  .info-container {
+}
+.info-container {
     text-align: center;
     font-size: 20px;
     margin-top: 10px;
-  }
-  
-  .current-song {
-    margin-bottom: 10px;
-  }
-  
-  .playlist {
-      margin-left: 50px;
-  }
+    font-weight: 600;
+    font-family: 'Play', sans-serif;
+}
 
+.current-song {
+    margin-bottom: 10px;
+}
+
+.playlist {
+    margin-left: 50px;
+    font-family: 'Play', sans-serif;
+}
 
 .list {
     display: grid;
@@ -63,5 +55,3 @@
 }
 
 
-
-  
