--- a/src/Cell.css
+++ b/src/Cell.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 480px) {
     .Cell {
-        height: 65px;
-        width: 65px;
+        height: 4rem;
+        width: 4rem;
     }
 }
