--- a/src/Music.css
+++ b/src/Music.css
@@ -9,6 +9,11 @@
     box-shadow: 0 0 30px #fff, -10px 0 50px #f0f, 10px 0 50px #0ff;
     border-radius: 5px;
     padding: 5px;
+
+}
+
+.MusicDisplay {
+    margin-top: 4rem;
 }
 
 .content {
@@ -29,6 +34,7 @@
 .header {
     text-align: center;
 }
+
 .info-container {
     text-align: center;
     font-size: 20px;
@@ -52,3 +58,5 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+
